# merklin

./: README.md
client/: .env.example  README.md  example.py  pyproject.toml
client/src/arthur/: __init__.py  __main__.py  init.sql
merkle-tree/: README.md  pyproject.toml
merkle-tree/src/merkle_tree/: __init__.py
server/: .env.example  .gitignore  README.md  pyproject.toml
server/src/merklin/: __init__.py  __main__.py  alerts.py  app.py  firebase_init.py  firestore_services.py  home.html  signin.html
