[project]
name = "arthur"
version = "0.1.0"
description = "The merklin client for tamper proof logging"
readme = "README.md"
authors = [
    { name = "Narendra S", email = "narendra.s1232@gmail.com" },
    { name = "Ajeetha J", email = "ajeethaofficial@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "merkle-tree",
    "websockets>=15.0.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
]

[tool.uv.sources]
merkle-tree = { path = "../merkle-tree" }

[tool.uv.build-backend]
source-include = ["src/arthur/init.sql"]
