[project]
name = "merkle-tree"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Narendra S", email = "narendra.s1232@gmail.com" },
    { name = "Ajeetha J", email = "ajeethaofficial@gmail.com" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
]
