[project]
name = "merklin"
version = "0.1.0"
description = "Merklin server app for tamper-proof logging"
readme = "README.md"
authors = [
    { name = "Narendra S", email = "narendra.s1232@gmail.com" },
    { name = "Ajeetha J", email = "ajeethaofficial@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "firebase-admin>=7.1.0",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
]
